@@ -1,3 +1,9 @@
+2006-12-12  Razik Yousfi  <yousfi@gostai.com>
+
+	Remove useless attributes.
+	* src/uvariablename.hh: Remove useless attributes.
+	* src/uvariablename.cc: Use local variables.
+
 2006-12-12  Akim Demaille  <demaille@gostai.com>
 
 	Don't be afraid to pass static strings to send
